--- a/src/exploratory.ipynb
+++ b/src/exploratory.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GENE_SELECTED = \"DIS3L2\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +103,7 @@
        "1  AAAAAACCCGTAGATAGCCT   chr12_95003615_+  NDUFA12 (55967)             1"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +123,7 @@
        "(74362, 4)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +259,7 @@
        "[2 rows x 18120 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +279,7 @@
        "(808, 18120)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,17 +328,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "GENE_SELECTED = \"DICER1\"\n",
+    "\n",
     "achilles.columns = achilles.columns.str.replace(\" \", \"_\").str.replace(\"[()]\", \"\", regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +459,7 @@
        "[2 rows x 18120 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +543,7 @@
        "4  ACH-000012  A1BG_1             0.033135"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,17 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4109    DICER1_23405\n",
+       "4125    DIS3L2_129563\n",
        "dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +704,7 @@
        "[778 rows x 3 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +803,7 @@
        "4  ACH-000012             0.033135  A1BG       1"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +824,7 @@
        "(14096582, 4)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +945,7 @@
        "4   19891600  +   56242  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1046,7 @@
        "4  ACH-000012             0.033135  A1BG       1"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,41 +1057,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'SELECTED_GENE': 'DICER1',\n",
-       " 'EVALUATED_GENE': 'A1BG',\n",
-       " 'CORRELATION': 0.12253578809221687,\n",
-       " 'PVALUE': 0.0006141925113892236,\n",
-       " 'LOGPVALUE': 3.2116954830446334}"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computed correlations for 1000 / 18119 genes.\n"
+     ]
     }
    ],
-   "source": [
-    "data = achilles_clean.copy()\n",
-    "\n",
-    "selected_gene = data[data['gene'] == GENE_SELECTED]['value_gene_selected']\n",
-    "\n",
-    "other_gene= data[data['gene'] == other_gene]['value_gene_selected']\n",
-    "correlation, pvalue = pearsonr(selected_gene, other_gene)\n",
-    "\n",
-    "correlation_info = {'SELECTED_GENE': GENE_SELECTED,'EVALUATED_GENE':other_gene,'CORRELATION':correlation,'PVALUE':pvalue,'LOGPVALUE': -np.log10(pvalue)}\n",
-    "correlation_info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "data = achilles_clean.copy()\n",
     "selected_gene_data = data[data['gene'] == GENE_SELECTED]['value_gene_selected']\n",
@@ -1091,263 +1076,6 @@
     "correlations = []\n",
     "\n",
     "gene_count = 0\n",
-    "# Iterate through unique genes in the dataset\n",
-    "for other_gene in data['gene'].unique():\n",
-    "    # Filter data for the current other_gene\n",
-    "    other_gene_data = data[data['gene'] == other_gene]['value_gene_selected']\n",
-    "    \n",
-    "    # Calculate the Pearson correlation\n",
-    "    correlation, pvalue = pearsonr(selected_gene_data, other_gene_data)\n",
-    "    \n",
-    "    # Store the correlation in the dictionary\n",
-    "    correlations.append({'SELECTED_GENE': GENE_SELECTED,'EVALUATED_GENE':other_gene,'CORRELATION':correlation,'PVALUE':pvalue,'LOGPVALUE': -np.log10(pvalue)})\n",
-    "\n",
-    "    gene_count += 1\n",
-    "    # Print progress\n",
-    "    if gene_count % 1000 == 0:\n",
-    "        print(f\"Computed correlations for {gene_count} / {len(data['gene'].unique())} genes.\")\n",
-    "results = pd.DataFrame(correlations)\n",
-    "FILENAME = \"../output/correlations/correlations_\"+ GENE_SELECTED +\" by_chr.csv\" \n",
-    "results.to_csv(FILENAME, index=False)\n",
-    "results.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SELECTED_GENE</th>\n",
-       "      <th>EVALUATED_GENE</th>\n",
-       "      <th>CORRELATION</th>\n",
-       "      <th>PVALUE</th>\n",
-       "      <th>LOGPVALUE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A1BG</td>\n",
-       "      <td>0.122536</td>\n",
-       "      <td>0.000614</td>\n",
-       "      <td>3.211695</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A1CF</td>\n",
-       "      <td>-0.107014</td>\n",
-       "      <td>0.002802</td>\n",
-       "      <td>2.552556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A2M</td>\n",
-       "      <td>-0.004279</td>\n",
-       "      <td>0.905152</td>\n",
-       "      <td>0.043279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A2ML1</td>\n",
-       "      <td>0.023904</td>\n",
-       "      <td>0.505558</td>\n",
-       "      <td>0.296229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A3GALT2</td>\n",
-       "      <td>0.023898</td>\n",
-       "      <td>0.505674</td>\n",
-       "      <td>0.296130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  SELECTED_GENE EVALUATED_GENE  CORRELATION    PVALUE  LOGPVALUE\n",
-       "0        DICER1           A1BG     0.122536  0.000614   3.211695\n",
-       "1        DICER1           A1CF    -0.107014  0.002802   2.552556\n",
-       "2        DICER1            A2M    -0.004279  0.905152   0.043279\n",
-       "3        DICER1          A2ML1     0.023904  0.505558   0.296229\n",
-       "4        DICER1        A3GALT2     0.023898  0.505674   0.296130"
-      ]
-     },
-     "execution_count": 108,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# clean the results\n",
-    "# correlation = pd.DataFrame(list(correlations.items()), columns=['gene', 'correlation'])\n",
-    "\n",
-    "# results = correlation.join(map.set_index('gene'), on='gene', how='left').drop(columns =['sgrna','genome_alignment','n_alignments','_'])\n",
-    "\n",
-    "# results[['correlation', 'p_value']] = pd.DataFrame(results['correlation'].tolist(), index=results.index)\n",
-    "# results = pd.DataFrame(correlations)\n",
-    "# FILENAME = \"../output/correlations/correlations_\"+ GENE_SELECTED +\" by_chr.csv\" \n",
-    "# results.to_csv(FILENAME, index=False)\n",
-    "# results.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computed correlations for 1000 / 18119 genes.\n",
-      "Computed correlations for 2000 / 18119 genes.\n",
-      "Computed correlations for 3000 / 18119 genes.\n",
-      "Computed correlations for 4000 / 18119 genes.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/usertmp/ipykernel_2512924/1454128727.py:3: RuntimeWarning: divide by zero encountered in log10\n",
-      "  return correlation, pvalue, -np.log10(pvalue)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computed correlations for 5000 / 18119 genes.\n",
-      "Computed correlations for 6000 / 18119 genes.\n",
-      "Computed correlations for 7000 / 18119 genes.\n",
-      "Computed correlations for 8000 / 18119 genes.\n",
-      "Computed correlations for 9000 / 18119 genes.\n",
-      "Computed correlations for 10000 / 18119 genes.\n",
-      "Computed correlations for 11000 / 18119 genes.\n",
-      "Computed correlations for 12000 / 18119 genes.\n",
-      "Computed correlations for 13000 / 18119 genes.\n",
-      "Computed correlations for 14000 / 18119 genes.\n",
-      "Computed correlations for 15000 / 18119 genes.\n",
-      "Computed correlations for 16000 / 18119 genes.\n",
-      "Computed correlations for 17000 / 18119 genes.\n",
-      "Computed correlations for 18000 / 18119 genes.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SELECTED_GENE</th>\n",
-       "      <th>EVALUATED_GENE</th>\n",
-       "      <th>CORRELATION</th>\n",
-       "      <th>PVALUE</th>\n",
-       "      <th>LOGPVALUE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A1BG</td>\n",
-       "      <td>0.122536</td>\n",
-       "      <td>0.000614</td>\n",
-       "      <td>3.211695</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A1CF</td>\n",
-       "      <td>-0.107014</td>\n",
-       "      <td>0.002802</td>\n",
-       "      <td>2.552556</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A2M</td>\n",
-       "      <td>-0.004279</td>\n",
-       "      <td>0.905152</td>\n",
-       "      <td>0.043279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A2ML1</td>\n",
-       "      <td>0.023904</td>\n",
-       "      <td>0.505558</td>\n",
-       "      <td>0.296229</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>DICER1</td>\n",
-       "      <td>A3GALT2</td>\n",
-       "      <td>0.023898</td>\n",
-       "      <td>0.505674</td>\n",
-       "      <td>0.296130</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  SELECTED_GENE EVALUATED_GENE  CORRELATION    PVALUE  LOGPVALUE\n",
-       "0        DICER1           A1BG     0.122536  0.000614   3.211695\n",
-       "1        DICER1           A1CF    -0.107014  0.002802   2.552556\n",
-       "2        DICER1            A2M    -0.004279  0.905152   0.043279\n",
-       "3        DICER1          A2ML1     0.023904  0.505558   0.296229\n",
-       "4        DICER1        A3GALT2     0.023898  0.505674   0.296130"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "def calculate_correlation(selected_gene, other_gene_data):\n",
     "    correlation, pvalue = pearsonr(selected_gene, other_gene_data)\n",
     "    return correlation, pvalue, -np.log10(pvalue)\n",
@@ -1383,6 +1111,13 @@
     "# Display the first few rows of the results\n",
     "results.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
