--- a/src/tests/RvsPython.ipynb
+++ b/src/tests/RvsPython.ipynb
@@ -2,18 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'GENES' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39m# File paths\u001b[39;00m\n\u001b[1;32m      4\u001b[0m GENE \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mDICER1\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfor\u001b[39;00m GENE \u001b[39min\u001b[39;00m GENES:\n\u001b[1;32m      7\u001b[0m     original_file_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../output/original_correlations/correlations_\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mGENE\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m_by_chr.tsv\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m      8\u001b[0m     filtered_file_path \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m../output/correlations/filtered/filtered_correlations_\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m+\u001b[39mGENE\u001b[39m+\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m_by_chr.csv\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'GENES' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "***************DICER1***************\n",
+      "\n",
+      "Genes in the original file but not in the generated file: 267\n",
+      "Genes in the generated file but not in the original file: 247\n",
+      "Matching genes: 2498\n",
+      "Percentage of overlap: 90.34%\n",
+      "\n",
+      "***************DROSHA***************\n",
+      "\n",
+      "Genes in the original file but not in the generated file: 308\n",
+      "Genes in the generated file but not in the original file: 317\n",
+      "Matching genes: 2514\n",
+      "Percentage of overlap: 89.09%\n",
+      "\n",
+      "***************DIS3L2***************\n",
+      "\n",
+      "Genes in the original file but not in the generated file: 187\n",
+      "Genes in the generated file but not in the original file: 214\n",
+      "Matching genes: 3329\n",
+      "Percentage of overlap: 94.68%\n"
      ]
     }
    ],
@@ -24,8 +40,9 @@
     "GENES = ['DICER1','DROSHA','DIS3L2']\n",
     "\n",
     "for GENE in GENES:\n",
-    "    original_file_path = \"../output/original_correlations/correlations_\"+GENE+\"_by_chr.tsv\"\n",
-    "    filtered_file_path = \"../output/correlations/filtered/filtered_correlations_\"+GENE+\"_by_chr.csv\"\n",
+    "    print(\"\\n***************\" + GENE+\"***************\")\n",
+    "    original_file_path = \"../../output/original_correlations/correlations_\"+GENE+\"_by_chr.tsv\"\n",
+    "    filtered_file_path = \"../../output/correlations/filtered/filtered_correlations_\"+GENE+\"_by_chr.csv\"\n",
     "\n",
     "    # Read the original and filtered files into DataFrames\n",
     "    original_df = pd.read_csv(original_file_path, sep='\\t')\n",
@@ -50,26 +67,19 @@
     "    percentage_overlap = len(matching_genes) / len(original_genes) * 100\n",
     "\n",
     "    # Output the results\n",
-    "    print(\"Number of lines in the original file:\", original_line_count)\n",
-    "    print(\"Number of lines in the filtered file:\", filtered_line_count)\n",
+    "    #print(\"Number of lines in the original file:\", original_line_count)\n",
+    "    #print(\"Number of lines in the filtered file:\", filtered_line_count)\n",
     "    print(\"\\nGenes in the original file but not in the generated file: {}\".format(len(genes_in_original_not_in_filtered)))\n",
-    "    print(genes_in_original_not_in_filtered)\n",
+    "    #print(genes_in_original_not_in_filtered)\n",
     "\n",
-    "    print(\"\\nGenes in the generated file but not in the original file:{}\".format(len(genes_in_filtered_not_in_original)))\n",
+    "    print(\"Genes in the generated file but not in the original file: {}\".format(len(genes_in_filtered_not_in_original)))\n",
     "    #print(genes_in_filtered_not_in_original)\n",
     "\n",
-    "    print(\"\\nMatching genes: {}\".format(len(matching_genes)))\n",
+    "    print(\"Matching genes: {}\".format(len(matching_genes)))\n",
     "    #print(matching_genes)\n",
     "\n",
-    "    print(\"\\nPercentage of overlap: {:.2f}%\".format(percentage_overlap))\n"
+    "    print(\"Percentage of overlap: {:.2f}%\".format(percentage_overlap))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
